map, pluck, mapTo operators

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     
     <script src="https://unpkg.com/rxjs@6.4.0/bundles/rxjs.umd.min.js"></script>
-    <script src="of.js"></script>
+    <script src="map.js"></script>
 </body>
 </html>
