scroll and progressBar in rxJS

--- a/index.html
+++ b/index.html
@@ -4,11 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./style.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
+    <div class="progressBar"></div>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
     
     <script src="https://unpkg.com/rxjs@6.4.0/bundles/rxjs.umd.min.js"></script>
-    <script src="filter.js"></script>
+    <script src="scroll.js"></script>
 </body>
 </html>
