--- a/index.html
+++ b/index.html
@@ -8,58 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="progressBar"></div>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut iste architecto rerum nam. Temporibus, nesciunt nostrum blanditiis nulla, hic ipsa et ab corporis itaque quidem, ipsam obcaecati omnis laborum? Iure.</p>
-    
+    <h2 id="countDown"></h2>
+    <div id="message"></div>
     <script src="https://unpkg.com/rxjs@6.4.0/bundles/rxjs.umd.min.js"></script>
-    <script src="scroll.js"></script>
+    <script src="countDownTimer.js"></script>
 </body>
 </html>
