take and first operators

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 id="countDown"></h2>
-    <div id="message"></div>
     <script src="https://unpkg.com/rxjs@6.4.0/bundles/rxjs.umd.min.js"></script>
-    <script src="countDownTimer.js"></script>
+    <script src="take.js"></script>
 </body>
 </html>
