--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <input id="text-input"/>
     <script src="https://unpkg.com/rxjs@6.4.0/bundles/rxjs.umd.min.js"></script>
-    <script src="takeUntil.js"></script>
+    <script src="dobunceTime.js"></script>
 </body>
 </html>
