--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <input id="text-input"/>
     <script src="https://unpkg.com/rxjs@6.4.0/bundles/rxjs.umd.min.js"></script>
-    <script src="throttleTime.js"></script>
+    <script src="sampleTime.js"></script>
 </body>
 </html>
